--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <body>
 
 <div class="container mt-5">
-    <div class="card">
-        <div class="card-header">
-            Lab Control
+    <div class="card" style="width:300px">
+        <div class="card-header" align="center">
+            Basic Lab
         </div>
+        <img class="card-img-top" src="assets/lab1_banner.jpg" alt="Card image">
         <div class="card-body">
             <form method="post" action="start_instance.php">
                 <button type="submit" class="btn btn-success btn-block">Start Instance</button>
