--- a/index.html
+++ b/index.html
@@ -3,36 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab Control</title>
-    <!-- Bootstrap CSS -->
+    <title>HebeSec Labs</title>
+    <!-- css -->
+    <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
 
 <div class="container mt-5">
-    <div class="card" style="width: 18rem;">
-        <div class="card-header" align="center">
-            <b>Basic Lab</b>
+    <div class="row justify-content-center">
+        <div class="col-md-4">
+            <div class="card1" style="width: 18rem;">
+                <div class="card-header" align="center">
+                    <b>Basic</b>
+                </div>
+                <img src="assets/lab1_banner.jpg" class="card-img-top" alt="Lab Banner Image">
+                <div class="card-body">
+                    <form method="post" action="start_instance.php">
+                        <button type="submit" class="btn btn-success btn-block">Start Instance</button>
+                    </form>
+                    <form method="post" action="stop_instance.php">
+                        <button type="submit" class="btn btn-danger btn-block mt-3">Stop Instance</button>
+                    </form>
+                    <form method="post" action="ssh_connection.php">
+                        <button type="submit" class="btn btn-primary btn-block mt-3">SSH Connection</button>
+                    </form>
+                </div>
+            </div>
         </div>
-        <img src="assets/lab1_banner.jpg" class="card-img-top" alt="Lab Banner Image">
 
-        <div class="card-body">
-            <form method="post" action="start_instance.php">
-                <button type="submit" class="btn btn-success btn-block">Start Instance</button>
-            </form>
+        <div class="col-md-4">
+            <div class="card2" style="width: 18rem;">
+                <div class="card-header" align="center">
+                    <b>Intermediate</b>
+                </div>
+                <img src="assets/lab1_banner.jpg" class="card-img-top" alt="Lab Banner Image">
+                <div class="card-body">
+                    <form method="post" action="start_instance.php">
+                        <button type="submit" class="btn btn-success btn-block">Start Instance</button>
+                    </form>
+                    <form method="post" action="stop_instance.php">
+                        <button type="submit" class="btn btn-danger btn-block mt-3">Stop Instance</button>
+                    </form>
+                    <form method="post" action="ssh_connection.php">
+                        <button type="submit" class="btn btn-primary btn-block mt-3">SSH Connection</button>
+                    </form>
+                </div>
+            </div>
+        </div>
 
-            <form method="post" action="stop_instance.php">
-                <button type="submit" class="btn btn-danger btn-block mt-3">Stop Instance</button>
-            </form>
-
-            <form method="post" action="ssh_connection.php">
-                <button type="submit" class="btn btn-primary btn-block mt-3">SSH Connection</button>
-            </form>
+        <!-- Card 3 -->
+        <div class="col-md-4">
+            <div class="card3" style="width: 18rem;">
+                <div class="card-header" align="center">
+                    <b>Advanced</b>
+                </div>
+                <img src="assets/lab1_banner.jpg" class="card-img-top" alt="Lab Banner Image">
+                <div class="card-body">
+                    <form method="post" action="start_instance.php">
+                        <button type="submit" class="btn btn-success btn-block">Start Instance</button>
+                    </form>
+                    <form method="post" action="stop_instance.php">
+                        <button type="submit" class="btn btn-danger btn-block mt-3">Stop Instance</button>
+                    </form>
+                    <form method="post" action="ssh_connection.php">
+                        <button type="submit" class="btn btn-primary btn-block mt-3">SSH Connection</button>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 </div>
 
-<!-- Bootstrap JS and dependencies (optional) -->
+<!-- optionals -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
