--- a/index.html
+++ b/index.html
@@ -9,7 +9,39 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
-<div class="background-image"></div>
+
+    <!-- loading animation
+<div class="center">
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+</div> -->
+
+<!-- cards -->
+<div class="background-image">
+
+    <div class="mouse_move">
+        <img id="img1" src="assets/icons-labs/1700048022997.png" class="mouse" value="2" />
+        <img id="img2" src="assets/icons-labs/1700048549269.png" class="mouse" value="-2" />
+        <img id="img3" src="assets/icons-labs/1700047667454.png" class="mouse" value="-2" />
+        <img id="img4" src="assets/icons-labs/1700047754149.png" class="mouse" value="-2" />
+        <img id="img5" src="assets/icons-labs/1700047806252.png" class="mouse" value="-2" />
+        <img id="img6" src="assets/icons-labs/1700047976693.png" class="mouse" value="-2" />
+        <img id="img7" src="assets/icons-labs/1700048064094.png" class="mouse" value="-2" />
+        <img id="img8" src="assets/icons-labs/1700048113439.png" class="mouse" value="-2" />
+        <img id="img9" src="assets/icons-labs/1700048169445.png" class="mouse" value="-2" />
+        <img id="img10" src="assets/icons-labs/1700048422028.png" class="mouse" value="-2" />
+    </div>
+</div>
+
+</div>
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-4">
@@ -52,7 +84,6 @@
             </div>
         </div>
 
-        <!-- Card 3 -->
         <div class="col-md-4">
             <div class="card3" style="width: 18rem;">
                 <div class="card-header" align="center">
@@ -74,6 +105,11 @@
         </div>
     </div>
 </div>
+
+
+<!-- js -->
+<script src="parallax.js"></script>
+<script src="script.js"></script>
 
 <!-- optionals -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
