making_attractive_texts

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
     <div class="row justify-content-center">
         <div class="col-md-4">
             <div class="card1" style="width: 18rem;">
-                <div class="card-header" align="center">
+                <div class="card-header" align="center" style="color: rgb(21, 255, 0);">
                     <b>Basic</b>
                 </div>
-                <img src="assets/lab1_banner.jpg" class="card-img-top" alt="Lab Banner Image">
+                <img src="assets/Data_security_09.jpg" class="card-img-top" alt="Lab Banner Image">
                 <div class="card-body">
                     <form method="post" action="start_instance.php">
                         <button type="submit" class="btn btn-success btn-block">Start Instance</button>
@@ -67,10 +67,10 @@
 
         <div class="col-md-4">
             <div class="card2" style="width: 18rem;">
-                <div class="card-header" align="center">
+                <div class="card-header" align="center" style="color: rgb(255, 217, 0);">
                     <b>Intermediate</b>
                 </div>
-                <img src="assets/lab1_banner.jpg" class="card-img-top" alt="Lab Banner Image">
+                <img src="assets/3839931.jpg" class="card-img-top" alt="Lab Banner Image">
                 <div class="card-body">
                     <form method="post" action="start_instance.php">
                         <button type="submit" class="btn btn-success btn-block">Start Instance</button>
@@ -87,10 +87,10 @@
 
         <div class="col-md-4">
             <div class="card3" style="width: 18rem;">
-                <div class="card-header" align="center">
+                <div class="card-header" align="center" style="color: rgb(211, 0, 0);">
                     <b>Advanced</b>
                 </div>
-                <img src="assets/lab1_banner.jpg" class="card-img-top" alt="Lab Banner Image">
+                <img src="assets/hooded-hacker-using-computer-dark-room-cybercrime-concept.jpg" class="card-img-top" alt="Lab Banner Image">
                 <div class="card-body">
                     <form method="post" action="start_instance.php">
                         <button type="submit" class="btn btn-success btn-block">Start Instance</button>
