started animation effects

--- a/index.html
+++ b/index.html
@@ -53,13 +53,10 @@
                 <img src="assets/Data_security_09.jpg" class="card-img-top" alt="Lab Banner Image">
                 <div class="card-body">
                     <form method="post" action="start_instance.php">
-                        <button type="submit" class="btn btn-success btn-block">Start Instance</button>
+                        <button type="submit" class="btn btn-success btn-block">Info</button>
                     </form>
                     <form method="post" action="stop_instance.php">
                         <button type="submit" class="btn btn-danger btn-block mt-3">Stop Instance</button>
-                    </form>
-                    <form method="post" action="ssh_connection.php">
-                        <button type="submit" class="btn btn-primary btn-block mt-3">SSH Connection</button>
                     </form>
                 </div>
             </div>
@@ -73,13 +70,10 @@
                 <img src="assets/3839931.jpg" class="card-img-top" alt="Lab Banner Image">
                 <div class="card-body">
                     <form method="post" action="start_instance.php">
-                        <button type="submit" class="btn btn-success btn-block">Start Instance</button>
+                        <button type="submit" class="btn btn-success btn-block">Info</button>
                     </form>
                     <form method="post" action="stop_instance.php">
                         <button type="submit" class="btn btn-danger btn-block mt-3">Stop Instance</button>
-                    </form>
-                    <form method="post" action="ssh_connection.php">
-                        <button type="submit" class="btn btn-primary btn-block mt-3">SSH Connection</button>
                     </form>
                 </div>
             </div>
@@ -93,13 +87,10 @@
                 <img src="assets/hooded-hacker-using-computer-dark-room-cybercrime-concept.jpg" class="card-img-top" alt="Lab Banner Image">
                 <div class="card-body">
                     <form method="post" action="start_instance.php">
-                        <button type="submit" class="btn btn-success btn-block">Start Instance</button>
+                        <button type="submit" class="btn btn-success btn-block">Info</button>
                     </form>
                     <form method="post" action="stop_instance.php">
                         <button type="submit" class="btn btn-danger btn-block mt-3">Stop Instance</button>
-                    </form>
-                    <form method="post" action="ssh_connection.php">
-                        <button type="submit" class="btn btn-primary btn-block mt-3">SSH Connection</button>
                     </form>
                 </div>
             </div>
